--- a/client/components/home/home.html
+++ b/client/components/home/home.html
@@ -1,5 +1,5 @@
 <div id="home-header" class="jumbotron">
-    <greeting name="home.name"></greeting>
+    <!-- <greeting name="home.name"></greeting> -->
 </div>
 
 <button class="btn btn-primary" ng-click="home.changeName()">Change</button>
