--- a/client/components/home/home.html
+++ b/client/components/home/home.html
@@ -1,6 +1,6 @@
 <div id="home-header" class="jumbotron">
     <!-- <greeting name="home.name"></greeting> -->
 </div>
-
+asdasd asssssssssssssssssss
 <button class="btn btn-primary" ng-click="home.changeName()">Change</button>
 <button class="btn btn-danger" ng-click="home.randomName()">Random</button>
