--- a/client/components/appBaseSecured/appBaseSecured.html
+++ b/client/components/appBaseSecured/appBaseSecured.html
@@ -30,90 +30,92 @@
 	</div>
 </nav>
 <div class="wrapper">
-	<div class="page-header section-dark" style="background-image: url('./assets/img/brigadeiro.jpg')">
+	<div class="page-header section-dark" style="background-image:url({{ctrl.getBackgroundImageBrigadeiro()}}">
 		<div class="filter"></div>
 		<div class="content-center">
 			<div class="container">
 				<div class="title-brand">
 					<h1 class="presentation-title">Doce Dom</h1>
 					<div class="fog-low">
-						<img ng-src="{{::fogLow()}}" alt="">
+						<img ng-src="{{::ctrl.fogLow()}}" alt="">
 					</div>
 					<div class="fog-low right">
-						<img ng-src="{{::fogLow()}}" alt="">
+						<img ng-src="{{::ctrl.fogLow()}}" alt="">
 					</div>
 				</div>
 
 				<h2 class="presentation-subtitle text-center">Make your mark with a Free Bootstrap 4 UI Kit! </h2>
 			</div>
 		</div>
-		<div class="moving-clouds" style="background-image: url('assets/img/clouds.png'); ">
+		<div class="moving-clouds" style="background-image:url({{ctrl.getClouds()}}">
 
 		</div>
-		<h6 class="category category-absolute">Designed and coded by
-			<a href="https://www.creative-tim.com" target="_blank">
-				<img ng-src="{{::creativeTimWhiteSlim2()}}" class="creative-tim-logo">
+		<h6 class=" category category-absolute ">Designed and coded by
+			<a href="https://www.creative-tim.com " target="_blank ">
+				<img ng-src="{{::ctrl.creativeTimWhiteSlim2()}} " class="creative-tim-logo ">
 			</a>
 		</h6>
 	</div>
-	<div class="main">
-		<div class="section section-buttons">
-			<div class="container">
-				<div class="tim-title">
+	<div class="main ">
+		<div class="section section-buttons ">
+			<div class="container ">
+				<div class="tim-title ">
 					<h2>Basic Elements</h2>
 				</div>
 			</div>
 		</div>
 	</div>
-	<div class="section javascript-components">
-		<div class="container">
-			<div class="tim-title">
+	<div class="section javascript-components ">
+		<div class="container ">
+			<div class="tim-title ">
 				<h2>Javascript Components</h2>
 			</div>
-			<div class="tim-title">
+			<div class="tim-title ">
 				<h3>Carousel</h3>
 			</div>
 		</div>
 	</div>
-	<div class="section" id="carousel">
-		<div class="container">
-			<div class="row">
-				<div class="col-md-8 ml-auto mr-auto">
-					<div class="card page-carousel">
-						<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-							<ol class="carousel-indicators">
-								<li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-								<li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-								<li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+	<div class="section " id="carousel ">
+		<div class="container ">
+			<div class="row ">
+				<div class="col-md-8 ml-auto mr-auto ">
+					<div class="card page-carousel ">
+						<div id="carouselExampleIndicators " class="carousel slide " data-ride="carousel ">
+							<ol class="carousel-indicators ">
+								<li data-target="#carouselExampleIndicators " data-slide-to="0 " class="active "></li>
+								<li data-target="#carouselExampleIndicators " data-slide-to="1 "></li>
+								<li data-target="#carouselExampleIndicators " data-slide-to="2 "></li>
 							</ol>
-							<div class="carousel-inner" role="listbox">
-								<div class="carousel-item active">
-									<img class="d-block img-fluid" ng-src="{{::soroushKarimi()}}" alt="First slide">
-									<div class="carousel-caption d-none d-md-block">
+							<div class="carousel-inner " role="listbox ">
+								<div class="carousel-item active ">
+									<img class="d-block img-fluid " ng-src="{{::ctrl.soroushKarimi()}} " alt="First slide ">
+									<div class="carousel-caption d-none d-md-block ">
 										<p>Somewhere</p>
 									</div>
 								</div>
-								<div class="carousel-item">
-									<img class="d-block img-fluid" ng-src="{{::federicoBeccari()}}" alt="Second slide">
-									<div class="carousel-caption d-none d-md-block">
+								<div class="carousel-item ">
+									<img class="d-block img-fluid " ng-src="{{::ctrl.federicoBeccari()}} " alt="Second slide ">
+									<div class="carousel-caption d-none d-md-block ">
 										<p>Somewhere else</p>
 									</div>
 								</div>
-								<div class="carousel-item">
-									<img class="d-block img-fluid" ng-src="{{::joshuaStannard()}}" alt="Third slide">
-									<div class="carousel-caption d-none d-md-block">
+								<div class="carousel-item ">
+									<img class="d-block img-fluid " ng-src="{{::ctrl.joshuaStannard()}} " alt="Third slide ">
+									<div class="carousel-caption d-none d-md-block ">
 										<p>Here it is</p>
 									</div>
 								</div>
 							</div>
 
-							<a class="left carousel-control carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-								<span class="fa fa-angle-left"></span>
-								<span class="sr-only">Previous</span>
+							<a class="left carousel-control carousel-control-prev " href="#carouselExampleIndicators " role="button
+		 " data-slide="prev ">
+								<span class="fa fa-angle-left "></span>
+								<span class="sr-only ">Previous</span>
 							</a>
-							<a class="right carousel-control carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-								<span class="fa fa-angle-right"></span>
-								<span class="sr-only">Next</span>
+							<a class="right carousel-control carousel-control-next " href="#carouselExampleIndicators " role="button
+		 " data-slide="next ">
+								<span class="fa fa-angle-right "></span>
+								<span class="sr-only ">Next</span>
 							</a>
 						</div>
 					</div>
@@ -124,11 +126,11 @@
 
 </div>
 
-<section class="appBaseSecured-section">
-	<div class="appBaseSecured-content">
-		<div class="row">
-			<div class="col-md-10 col-md-offset-1">
-				<div ui-view="content"></div>
+<section class="appBaseSecured-section ">
+	<div class="appBaseSecured-content ">
+		<div class="row ">
+			<div class="col-md-10 col-md-offset-1 ">
+				<div ui-view="content "></div>
 				testetetetetet
 			</div>
 		</div>
